Fixed z-index på dvale, så den vises over popup boxes

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -218,6 +218,7 @@ header {
 
 body.Dvale #screensaver {
   display: flex;
+  z-index: 999;
 }
 
 /* POP-UP BOX STYLE */
